# platon-editor

platon-editor/: Cargo.toml  README.md  structure.md
platon-editor/config/: default.toml
platon-editor/config/themes/: dark.toml  light.toml
platon-editor/docs/: commands.md  features.md  usage.md
platon-editor/lang/: mod.rs
platon-editor/lang/asm/: Cargo.toml
platon-editor/lang/asm/src/: lib.rs
platon-editor/lang/bash/: Cargo.toml
platon-editor/lang/bash/src/: lib.rs
platon-editor/lang/basic/: Cargo.toml
platon-editor/lang/basic/src/: lib.rs
platon-editor/lang/brainfuck/: Cargo.toml
platon-editor/lang/brainfuck/src/: lib.rs
platon-editor/lang/c/: Cargo.toml
platon-editor/lang/c/src/: lib.rs
platon-editor/lang/cpp/: Cargo.toml
platon-editor/lang/cpp/src/: lib.rs
platon-editor/lang/fortran/: Cargo.toml
platon-editor/lang/fortran/src/: lib.rs
platon-editor/lang/go/: Cargo.toml
platon-editor/lang/go/src/: lib.rs
platon-editor/lang/java/: Cargo.toml
platon-editor/lang/java/src/: lib.rs
platon-editor/lang/javascript/: Cargo copy.toml
platon-editor/lang/javascript/src/: lib.rs
platon-editor/lang/kotlin/: Cargo.toml
platon-editor/lang/kotlin/src/: lib.rs
platon-editor/lang/lua/: Cargo.toml
platon-editor/lang/lua/src/: lib.rs
platon-editor/lang/markdown/: Cargo.toml
platon-editor/lang/markdown/src/: lib.rs
platon-editor/lang/ook/: Cargo.toml
platon-editor/lang/ook/src/: lib.rs
platon-editor/lang/php/src/: lib.rs
platon-editor/lang/python/: Cargo.toml
platon-editor/lang/python/src/: lib.rs
platon-editor/lang/ruby/: Cargo.toml
platon-editor/lang/ruby/src/: lib.rs
platon-editor/lang/rust/: Cargo.toml
platon-editor/lang/rust/src/: lib.rs
platon-editor/lang/scala/: Cargo.toml
platon-editor/lang/scala/src/: lib.rs
platon-editor/lang/swift/: Cargo.toml
platon-editor/lang/swift/src/: lib.rs
platon-editor/lang/typescript/: Cargo.toml
platon-editor/lang/typescript/src/: lib.rs
platon-editor/platon_editor/: Cargo.toml
platon-editor/platon_editor/src/: buffer.rs  commands.rs  editor.rs  error.rs  file.rs  input.rs  main.rs  markdown_render.rs  optimize.rs  session.rs  syntax.rs  terminal.rs  theme.rs  tui.rs  utils.rs
platon-editor/scripts/: build.sh  run.sh  test.sh
