[package]
name = "platon_editor"
version = "0.1.0"
edition = "2021"
authors = ["TonNom <tonmail@example.com>"]
description = "Un éditeur de texte TUI multi-langages avec autocomplétion, interpréteurs, documentation intégrée."

[dependencies]
crossterm = "0.27"
tui = { version = "0.19", features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
lazy_static = "1.4"
pulldown-cmark = "0.9"
regex = "1.10"
dirs = "5.0"
once_cell = "1.19"

# Exemple : dépendances internes aux langages
lang-rust = { path = "../lang/rust" }
lang-python = { path = "../lang/python" }
lang-javascript = { path = "../lang/javascript" }
# ... (ajoute les autres langages que tu veux embarquer statiquement)
