[package]
name = "platon-lang-asm"
version = "0.1.0"
edition = "2021"
authors = ["Ton Nom <ton.email@example.com>"]
description = "Module assembleur pour l'éditeur Platon : autocomplétion, documentation, snippets."
license = "MIT"
repository = "https://github.com/tonprojet/platon"

[dependencies]
# Aucune dépendance externe pour ce module
