[package]
name = "platon-lang-bash"
version = "0.1.0"
edition = "2021"
authors = ["Ton Nom <ton.email@example.com>"]
description = "Module Bash pour l'éditeur Platon : autocomplétion, documentation, snippets, interprétation."
license = "MIT"
repository = "https://github.com/tonprojet/platon"

[dependencies]
# Aucune dépendance externe pour ce module
