[package]
name = "platon-lang-java"
version = "0.1.0"
edition = "2021"
authors = ["Ton Nom <ton.email@example.com>"]
description = "Module Java pour l'éditeur Platon : autocomplétion, documentation, snippets et interprétation via javac/java."
license = "MIT"
repository = "https://github.com/tonprojet/platon"

[dependencies]
# Pas de dépendances externes spécifiques
