[package]
name = "platon-lang-kotlin"
version = "0.1.0"
edition = "2021"
authors = ["Ton Nom <ton.email@example.com>"]
description = "Module Kotlin pour Platon : autocomplétion, docs, snippets, interprétation via kotlinc/kotlin."
license = "MIT"
repository = "https://github.com/tonprojet/platon"

[dependencies]
# Pas de dépendances externes spécifiques
