[package]
name = "platon-lang-markdown"
version = "0.1.0"
edition = "2021"
authors = ["Ton Nom <ton.email@example.com>"]
description = "Module Markdown pour Platon : autocomplétion, documentation, snippet, rendu avec pulldown-cmark."
license = "MIT"
repository = "https://github.com/tonprojet/platon"

[dependencies]
pulldown-cmark = "0.9"
